--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,3 +1,7 @@
+.grid {
+  margin: 10px;
+}
+
 .row {
   display: flex;
 }
@@ -5,7 +9,8 @@
 .cell {
   width: 10px;
   height: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin: 1px;
+  background-color: white;
   cursor: pointer;
 }
 
